Fix overflow-x and center menu responsive links

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body{
@@ -417,6 +418,8 @@ footer{
         background: var(--firstColor);
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        gap: 3rem;
         width: 50%;
         /*Not show until click*/
         transform: translateX(100%);
